# librtkgpio

./: .gitignore  README.md
rtkgpio/: CMakeLists.txt
rtkgpio/include/rtkgpio/: rtkgpio.h  rtkgpio_dll.h
rtkgpio/src/: rtkgpio.c
